# nyc-landmarks-vector-db

./: .bandit  .clinerules  .editorconfig  .env  .env.development  .env.sample  .flake8  .gitignore  .gitleaks.toml  .mdformatignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  .terraformignore  .tflint.hcl  .tool-versions  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TEST_ORGANIZATION_FIX.md  WIKIPEDIA_PROCESSING_FIX.md  branch_protection.json  constraints.txt  debug_db_client.py  debug_wikipedia_failures.py  demo_vector_metadata_validator.py  direct_update.sh  docker-compose.sonarqube.yml  github_log_analysis_20250508_201220.txt  landmark_reports.json  manage_packages.sh  mypy.ini  mypy_stubs.ini  pdf_urls.json  pyproject.toml  pyrightconfig-precommit.json  pyrightconfig.json  pytest.ini  (+26 more)
.devcontainer/: Dockerfile  Dockerfile.prebuilt  README.md  devcontainer.json  devcontainer.json.backup  devcontainer.prebuilt.json  manage-devcontainer.sh  post-create-prebuilt.sh  post-create.sh  show-build-info-source.sh  show-build-info.sh
.github/: copilot_instructions.md  dependabot-sync.md  dependabot.yml
.sonarlint/: connectedMode.json
.sonarqube/: README.md  docker-compose.yml  run-analysis.sh  setup-token.sh  sonar-project.properties  start-sonarqube.sh  stop-sonarqube.sh
docs/: TERRAFORM_DEVCONTAINER.md  api_availability_testing.md  api_query_search_logging_flow.md  api_query_search_sequence_diagram.md  api_response_handling.md  api_validation_logging.md  building_metadata_integration.md  ci_cd_pipeline.md  ci_test_failure_fix.md  cleanup_summary.md  cloud_run_logging_setup.md  comprehensive_correlation_testing.md  correlation_id_headers.md  correlation_testing_enhancement.md  correlation_utility_refactoring.md  dashboard_metrics_troubleshooting.md  diff_tools.md  duplicate_logging_fix_summary.md  enhanced_embedding_correlation_logging.md  environment_setup.md  flattened_building_metadata.md  gcp_auth_consolidation_complete.md  gcp_logging_deployment_summary.md  gcp_migration_summary.md  gcp_setup.md  gcp_setup_complete.md  google_cloud_logging_enhancements.md  google_cloud_logging_filters.md  google_cloud_logging_final_status.md  health_monitoring_setup.md  mock_architecture_flow.md  pandas_2_3_0_upgrade.md  pinecone_7_0_2_upgrade.md  post_request_body_logging.md  pr_144_test_results.md  pr_146_documentation_fixes.md  pr_154_wikipedia_api_improvements.md  pr_172_review_recommendations.md  pr_209_correlation_summary.md  request_body_logging_development.md  (+27 more)
infrastructure/: .terraform.lock.hcl  QUICK_REFERENCE.md  README.md  create_api_dashboard.sh  deploy_dashboard.sh  deploy_dashboard_only.sh  health_check.sh  import_existing_resources.sh  setup_terraform.sh  test_terraform_integration.tf
memory-bank/: AGENTS.md  GCP_DEPLOYMENT.md  README.md  (+34 more)
(+266 files in other folders)
