[project]
name = "nyc_landmarks_vector_db"
version = "1.0.0"
description = "NYC Landmarks Vector Database"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = ["stubs/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
# Ignores init return values - this appears to be the root issue
disallow_untyped_calls = false
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "nyc_landmarks.db.db_client"
disallow_untyped_defs = false
