[project]
description = "NYC Landmarks Vector Database"
license = {file = "LICENSE"}
name = "nyc_landmarks_vector_db"
readme = "README.md"
requires-python = ">=3.10"
version = "1.0.0"

[tool.black]
include = '\.pyi?$'
line-length = 88
target-version = ["py310"]

[tool.isort]
line_length = 88
profile = "black"

[tool.flake8]
exclude = ["stubs/*"]
extend-ignore = "E203"
max-line-length = 88

# Mypy configuration is centralized in mypy.ini

# All mypy overrides are now in mypy.ini
