[project]
description = "NYC Landmarks Vector Database"
license = {file = "LICENSE"}
name = "nyc_landmarks_vector_db"
readme = "README.md"
requires-python = ">=3.13"
version = "1.0.0"

[tool.black]
include = '\.pyi?$'
line-length = 88
skip-string-normalization = true
target-version = ["py313"]

[tool.isort]
line_length = 88
profile = "black"

[tool.flake8]
exclude = ["stubs/*"]
extend-ignore = "E203"
max-line-length = 88

# Mypy configuration is centralized in mypy.ini

# All mypy overrides are now in mypy.ini

[tool.bandit]
# Exclude virtual environment and build directories
exclude_dirs = ["venv", "nyc_landmarks_vector_db.egg-info", "__pycache__", ".git"]

# Skip tests that have legitimate usage or are false positives
# B101: Assert usage in test files is acceptable
# B404: Subprocess import is legitimate for script execution
# B603: Subprocess call is secure with validated inputs
skips = ["B101", "B404", "B603"]

[tool.pytest.ini_options]
addopts = "--verbose"
asyncio_mode = "strict"
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
